--- a/dairy/eggs.html
+++ b/dairy/eggs.html
@@ -13,9 +13,9 @@
         <aside>
             <h2>Additional Resources</h2>
             <ul>
-                <li><a href="../produce/carrotts.html" target="_blank">carrotts</a></li>
-                <li><a href="../produce/peas.html" target="_blank">peas</a></li>
-                <li><a href="../dairy/milk.html" target="_blank">milk</a></li>
+                <li><a href="../produce/carrotts.html"carrotts</a></li>
+                <li><a href="../produce/peas.html">peas</a></li>
+                <li><a href="../dairy/milk.html">milk</a></li>
             </ul>
         </aside>
     </main>
