--- a/dairy/eggs.html
+++ b/dairy/eggs.html
@@ -13,7 +13,7 @@
         <aside>
             <h2>Additional Resources</h2>
             <ul>
-                <li><a href="../produce/carrotts.html"carrotts</a></li>
+                <li><a href="../produce/carrotts.html">carrotts</a></li>
                 <li><a href="../produce/peas.html">peas</a></li>
                 <li><a href="../dairy/milk.html">milk</a></li>
             </ul>
